updated with 2024 and 2025 papers

--- a/papers/feick2024avatarcompleteness/index.html
+++ b/papers/feick2024avatarcompleteness/index.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title>Stargazer: An Interactive Camera Robot for Capturing How-To Videos Based on Subtle Instructor Cues</title>
+		<title>The Impact of Avatar Completeness on Embodiment and the Detectability of Hand Redirection in Virtual Reality</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -76,17 +76,19 @@
 				<div class="9u skel-cell-important">
 					<div id="content">
 						<!-- Content -->
-						<h1 style="margin: 0 0 0.5em 0">Stargazer: An Interactive Camera Robot for Capturing How-To Videos Based on Subtle Instructor Cues</h1>
+						<h1 style="margin: 0 0 0.5em 0">The Impact of Avatar Completeness on Embodiment and the Detectability of Hand Redirection in Virtual Reality</h1>
 
 <p style="margin: 0.5em 0 1em 0">
-<span id="li2023stargazer">Jiannan Li, Mauricio Sousa, Karthik Mahadevan, Bryan Wang, Paula Akemi Aoyagui, Nicole Yu, Angela Yang, Ravin Balakrishnan, Anthony Tang, and Tovi Grossman. (2023). <span style="text-decoration: underline">Stargazer: An Interactive Camera Robot for Capturing How-To Videos Based on Subtle Instructor Cues</span>. In <i>CHI 2023: Proceedings of the 2023 SIGCHI Conference on Human Factors in Computing Systems</i>.</span>
+<span id="feick2024avatarcompleteness">Martin Feick, André Zenner, Simon Seibert, Anthony Tang, and Antonio Krüger. (2024). <span style="text-decoration: underline">The Impact of Avatar Completeness on Embodiment and the Detectability of Hand Redirection in Virtual Reality</span>. In <i>CHI 2024: Proceedings of the 2024 SIGCHI Conference on Human Factors in Computing Systems</i>.</span>
 
 
+
+	<small>Acceptance: 1058/4028 - 26.3%.</small>
 
 </p>
 
 <h2>Abstract</h2>
-<p style="margin: 0.5em 0 1em 0">Live and pre-recorded video tutorials are an effective means for teaching physical skills such as cooking or prototyping electronics. A dedicated cameraperson following an instructor’s activities can improve production quality. However, instructors who do not have access to a cameraperson’s help often have to work within the constraints of static cameras. We present Stargazer, a novel approach for assisting with tutorial content creation with a camera robot that autonomously tracks regions of interest based on instructor actions to capture dynamic shots. Instructors can adjust the camera behaviors of Stargazer with subtle cues, including gestures and speech, allowing them to fluidly integrate camera control commands into instructional activities. Our user study with six instructors, each teaching a distinct skill, showed that participants could create dynamic tutorial videos with a diverse range of subjects, camera framing, and camera angle combinations using Stargazer.</p>
+<p style="margin: 0.5em 0 1em 0">To enhance interactions in VR, many techniques introduce offsets between the virtual and real-world position of users’ hands. Never- theless, such hand redirection (HR) techniques are only effective as long as they go unnoticed by users—not disrupting the VR ex- perience. While several studies consider how much unnoticeable redirection can be applied, these focus on mid-air floating hands that are disconnected from users’ bodies. Increasingly, VR avatars are embodied as being directly connected with the user’s body, which provide more visual cue anchoring, and may therefore reduce the unnoticeable redirection threshold. In this work, we studied more complete avatars and their effect on the sense of embodiment and the detectability of HR. We found that higher avatar completeness increases embodiment, and we provide evidence for the absence of practically relevant effects on the detectability of HR.</p>
 
 <!--
 
@@ -95,29 +97,33 @@
 <h2>Materials</h2>
 <p style="margin: 0.5em 0 1em 0">
 
-	<a href="http://hcitang.org/papers/2023-chi2023-li-stargazer.pdf"><i class="fa fa-file-pdf-o"></i> PDF File (http://hcitang.org/papers/2023-chi2023-li-stargazer.pdf)</a><br/>
+	<a href=""><i class="fa fa-file-pdf-o"></i> PDF File ()</a><br/>
 
 
+	<a href="https://chi2024.acm.org/"><i class="fa fa-sticky-note-o"></i> URL (https://chi2024.acm.org/)</a><br/>
 
-	<a href="http://hcitang.org/papers/2023-chi2023-li-stargazer.mp4"><i class="fa fa-film"></i> Video (http://hcitang.org/papers/2023-chi2023-li-stargazer.mp4)</a><br/>
+
+	<a href=""><i class="fa fa-film"></i> Video ()</a><br/>
 
 
-	<a href="https://doi.org/10.1145/3544548.3580896"><i class="fa fa-external-link"></i> DOI (https://doi.org/10.1145/3544548.3580896)</a><br/>
+	<a href="https://doi.org/10.1145/3643834.3661547"><i class="fa fa-external-link"></i> DOI (https://doi.org/10.1145/3643834.3661547)</a><br/>
 
 </p>
 
 
 
 <h2>BibTeX</h2>
-<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@inproceedings{li2023stargazer,<br />
-&nbsp;&nbsp;author = {Li, Jiannan and Sousa, Mauricio and Mahadevan, Karthik and Wang, Bryan and Aoyagui, Paula Akemi and Yu, Nicole and Yang, Angela and Balakrishnan, Ravin and Tang, Anthony and Grossman, Tovi},<br />
-&nbsp;&nbsp;title = {Stargazer: An Interactive Camera Robot for Capturing How-To Videos Based on Subtle Instructor Cues},<br />
-&nbsp;&nbsp;booktitle = {CHI 2023: Proceedings of the 2023 SIGCHI Conference on Human Factors in Computing Systems},<br />
-&nbsp;&nbsp;year = {2023},<br />
+<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@inproceedings{feick2024avatarcompleteness,<br />
+&nbsp;&nbsp;title = {The Impact of Avatar Completeness on Embodiment and the Detectability of Hand Redirection in Virtual Reality},<br />
+&nbsp;&nbsp;author = {Feick, Martin and Zenner, André and Seibert, Simon and Tang, Anthony and Krüger, Antonio},<br />
+&nbsp;&nbsp;year = {2024},<br />
+&nbsp;&nbsp;booktitle = {CHI 2024: Proceedings of the 2024 SIGCHI Conference on Human Factors in Computing Systems},<br />
 &nbsp;&nbsp;type = {conference},<br />
-&nbsp;&nbsp;pdfurl = {http://hcitang.org/papers/2023-chi2023-li-stargazer.pdf},<br />
-&nbsp;&nbsp;videourl = {http://hcitang.org/papers/2023-chi2023-li-stargazer.mp4},<br />
-&nbsp;&nbsp;doi = {https://doi.org/10.1145/3544548.3580896}<br />
+&nbsp;&nbsp;pdfurl = {},<br />
+&nbsp;&nbsp;videourl = {},<br />
+&nbsp;&nbsp;doi = {https://doi.org/10.1145/3643834.3661547},<br />
+&nbsp;&nbsp;url = {https://chi2024.acm.org/},<br />
+&nbsp;&nbsp;acceptance = {1058/4028 - 26.3%}<br />
 }<br />
 </p>
 					</div>
