--- a/papers/feick2024predictinglimits/index.html
+++ b/papers/feick2024predictinglimits/index.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title>Stargazer: An Interactive Camera Robot for Capturing How-To Videos Based on Subtle Instructor Cues</title>
+		<title>Predicting the Limits: Tailoring Unnoticeable Hand Redirection Offsets in Virtual Reality to Individuals’ Perceptual Boundaries</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -76,17 +76,17 @@
 				<div class="9u skel-cell-important">
 					<div id="content">
 						<!-- Content -->
-						<h1 style="margin: 0 0 0.5em 0">Stargazer: An Interactive Camera Robot for Capturing How-To Videos Based on Subtle Instructor Cues</h1>
+						<h1 style="margin: 0 0 0.5em 0">Predicting the Limits: Tailoring Unnoticeable Hand Redirection Offsets in Virtual Reality to Individuals’ Perceptual Boundaries</h1>
 
 <p style="margin: 0.5em 0 1em 0">
-<span id="li2023stargazer">Jiannan Li, Mauricio Sousa, Karthik Mahadevan, Bryan Wang, Paula Akemi Aoyagui, Nicole Yu, Angela Yang, Ravin Balakrishnan, Anthony Tang, and Tovi Grossman. (2023). <span style="text-decoration: underline">Stargazer: An Interactive Camera Robot for Capturing How-To Videos Based on Subtle Instructor Cues</span>. In <i>CHI 2023: Proceedings of the 2023 SIGCHI Conference on Human Factors in Computing Systems</i>.</span>
+<span id="feick2024predictinglimits">Martin Feick, Kora Persephone Regitz, Lukas Gehrke, André Zenner, Anthony Tang, Tobias Patrick Jungbluth, Maurice Rekrut, and Antonio Krüger. (2024). <span style="text-decoration: underline">Predicting the Limits: Tailoring Unnoticeable Hand Redirection Offsets in Virtual Reality to Individuals’ Perceptual Boundaries</span>. In <i>UIST 2024: Proceedings of the 37th Annual ACM Symposium on User Interface Software and Technology</i>, Association for Computing Machinery.</span>
 
 
 
 </p>
 
 <h2>Abstract</h2>
-<p style="margin: 0.5em 0 1em 0">Live and pre-recorded video tutorials are an effective means for teaching physical skills such as cooking or prototyping electronics. A dedicated cameraperson following an instructor’s activities can improve production quality. However, instructors who do not have access to a cameraperson’s help often have to work within the constraints of static cameras. We present Stargazer, a novel approach for assisting with tutorial content creation with a camera robot that autonomously tracks regions of interest based on instructor actions to capture dynamic shots. Instructors can adjust the camera behaviors of Stargazer with subtle cues, including gestures and speech, allowing them to fluidly integrate camera control commands into instructional activities. Our user study with six instructors, each teaching a distinct skill, showed that participants could create dynamic tutorial videos with a diverse range of subjects, camera framing, and camera angle combinations using Stargazer.</p>
+<p style="margin: 0.5em 0 1em 0">Many illusion and interaction techniques in Virtual Reality (VR) rely on Hand Redirection (HR), which has proved to be effective as long as the introduced offsets between the position of the real and virtual hand do not noticeably disturb the user experience. Yet calibrating HR offsets is a tedious and time-consuming process involving psychophysical experimentation, and the resulting thresholds are known to be affected by many variables—limiting HR’s practical utility. As a result, there is a clear need for alternative methods that allow tailoring HR to the perceptual boundaries of individual users. We conducted an experiment with 18 participants combining movement, eye gaze and EEG data to detect HR offsets Below, At, and Above individuals’ detection thresholds. Our results suggest that we can distinguish HR At and Above from no HR. Our exploration provides a promising new direction with potentially strong implications for the broad field of VR illusions.</p>
 
 <!--
 
@@ -95,29 +95,34 @@
 <h2>Materials</h2>
 <p style="margin: 0.5em 0 1em 0">
 
-	<a href="http://hcitang.org/papers/2023-chi2023-li-stargazer.pdf"><i class="fa fa-file-pdf-o"></i> PDF File (http://hcitang.org/papers/2023-chi2023-li-stargazer.pdf)</a><br/>
 
 
 
-	<a href="http://hcitang.org/papers/2023-chi2023-li-stargazer.mp4"><i class="fa fa-film"></i> Video (http://hcitang.org/papers/2023-chi2023-li-stargazer.mp4)</a><br/>
-
-
-	<a href="https://doi.org/10.1145/3544548.3580896"><i class="fa fa-external-link"></i> DOI (https://doi.org/10.1145/3544548.3580896)</a><br/>
+	<a href="https://doi.org/10.1145/3654777.3676425"><i class="fa fa-external-link"></i> DOI (https://doi.org/10.1145/3654777.3676425)</a><br/>
 
 </p>
 
 
+<h2>Keywords</h2>
+<p style="margin: 0.5em 0 1em 0">EEG, VR illusions, Virtual reality, detection thresholds, eye gaze, hand movement, hand redirection</p>
+
 
 <h2>BibTeX</h2>
-<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@inproceedings{li2023stargazer,<br />
-&nbsp;&nbsp;author = {Li, Jiannan and Sousa, Mauricio and Mahadevan, Karthik and Wang, Bryan and Aoyagui, Paula Akemi and Yu, Nicole and Yang, Angela and Balakrishnan, Ravin and Tang, Anthony and Grossman, Tovi},<br />
-&nbsp;&nbsp;title = {Stargazer: An Interactive Camera Robot for Capturing How-To Videos Based on Subtle Instructor Cues},<br />
-&nbsp;&nbsp;booktitle = {CHI 2023: Proceedings of the 2023 SIGCHI Conference on Human Factors in Computing Systems},<br />
-&nbsp;&nbsp;year = {2023},<br />
-&nbsp;&nbsp;type = {conference},<br />
-&nbsp;&nbsp;pdfurl = {http://hcitang.org/papers/2023-chi2023-li-stargazer.pdf},<br />
-&nbsp;&nbsp;videourl = {http://hcitang.org/papers/2023-chi2023-li-stargazer.mp4},<br />
-&nbsp;&nbsp;doi = {https://doi.org/10.1145/3544548.3580896}<br />
+<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@inproceedings{feick2024predictinglimits,<br />
+&nbsp;&nbsp;author = {Feick, Martin and Regitz, Kora Persephone and Gehrke, Lukas and Zenner, Andr\'{e} and Tang, Anthony and Jungbluth, Tobias Patrick and Rekrut, Maurice and Kr\"{u}ger, Antonio},<br />
+&nbsp;&nbsp;title = {Predicting the Limits: Tailoring Unnoticeable Hand Redirection Offsets in Virtual Reality to Individuals' Perceptual Boundaries},<br />
+&nbsp;&nbsp;year = {2024},<br />
+&nbsp;&nbsp;isbn = {9798400706288},<br />
+&nbsp;&nbsp;publisher = {Association for Computing Machinery},<br />
+&nbsp;&nbsp;address = {New York, NY, USA},<br />
+&nbsp;&nbsp;doi = {https://doi.org/10.1145/3654777.3676425},<br />
+&nbsp;&nbsp;booktitle = {UIST 2024: Proceedings of the 37th Annual ACM Symposium on User Interface Software and Technology},<br />
+&nbsp;&nbsp;articleno = {24},<br />
+&nbsp;&nbsp;numpages = {13},<br />
+&nbsp;&nbsp;keywords = {EEG, VR illusions, Virtual reality, detection thresholds, eye gaze, hand movement, hand redirection},<br />
+&nbsp;&nbsp;location = {Pittsburgh, PA, USA},<br />
+&nbsp;&nbsp;series = {UIST '24},<br />
+&nbsp;&nbsp;type = {conference}<br />
 }<br />
 </p>
 					</div>
