--- a/papers/mahadevan2025imageinthat/index.html
+++ b/papers/mahadevan2025imageinthat/index.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title>Stargazer: An Interactive Camera Robot for Capturing How-To Videos Based on Subtle Instructor Cues</title>
+		<title>ImageInThat: Manipulating Images to Convey User Instructions to Robots</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -76,17 +76,19 @@
 				<div class="9u skel-cell-important">
 					<div id="content">
 						<!-- Content -->
-						<h1 style="margin: 0 0 0.5em 0">Stargazer: An Interactive Camera Robot for Capturing How-To Videos Based on Subtle Instructor Cues</h1>
+						<h1 style="margin: 0 0 0.5em 0">ImageInThat: Manipulating Images to Convey User Instructions to Robots</h1>
 
 <p style="margin: 0.5em 0 1em 0">
-<span id="li2023stargazer">Jiannan Li, Mauricio Sousa, Karthik Mahadevan, Bryan Wang, Paula Akemi Aoyagui, Nicole Yu, Angela Yang, Ravin Balakrishnan, Anthony Tang, and Tovi Grossman. (2023). <span style="text-decoration: underline">Stargazer: An Interactive Camera Robot for Capturing How-To Videos Based on Subtle Instructor Cues</span>. In <i>CHI 2023: Proceedings of the 2023 SIGCHI Conference on Human Factors in Computing Systems</i>.</span>
+<span id="mahadevan2025imageinthat">Karthik Mahadevan, Blaine Lewis, Jiannan Li, Bilge Mutlu, Anthony Tang, and Tovi Grossman. (2025). <span style="text-decoration: underline">ImageInThat: Manipulating Images to Convey User Instructions to Robots</span>. In <i>Proceedings of the 2025 ACM/IEEE International Conference on Human-Robot Interaction</i>, IEEE Press, 757–766.</span>
 
+
+	<small>Notes: Best Paper Award (Top 1% of all submissions).</small>
 
 
 </p>
 
 <h2>Abstract</h2>
-<p style="margin: 0.5em 0 1em 0">Live and pre-recorded video tutorials are an effective means for teaching physical skills such as cooking or prototyping electronics. A dedicated cameraperson following an instructor’s activities can improve production quality. However, instructors who do not have access to a cameraperson’s help often have to work within the constraints of static cameras. We present Stargazer, a novel approach for assisting with tutorial content creation with a camera robot that autonomously tracks regions of interest based on instructor actions to capture dynamic shots. Instructors can adjust the camera behaviors of Stargazer with subtle cues, including gestures and speech, allowing them to fluidly integrate camera control commands into instructional activities. Our user study with six instructors, each teaching a distinct skill, showed that participants could create dynamic tutorial videos with a diverse range of subjects, camera framing, and camera angle combinations using Stargazer.</p>
+<p style="margin: 0.5em 0 1em 0">Foundation models are rapidly improving the capability of robots in performing everyday tasks autonomously such as meal preparation, yet robots will still need to be instructed by humans due to model performance, the difficulty of capturing user preferences, and the need for user agency. Robots can be instructed using various methods—natural language conveys immediate instructions but can be abstract or ambiguous, whereas end-user programming supports longer-horizon tasks but interfaces face difficulties in capturing user intent. In this work, we propose using direct manipulation of images as an alternative paradigm to instruct robots, and introduce a specific instantiation called ImageInThat which allows users to perform direct manipulation on images in a timeline-style interface to generate robot instructions. Through a user study, we demonstrate the efficacy of ImageInThat to instruct robots in kitchen manipulation tasks, comparing it to a text-based natural language instruction method. The results show that participants were faster with ImageInThat and preferred to use it over the text-based method. Supplementary material including code can be found at: https://image-in-that.github.io/.</p>
 
 <!--
 
@@ -95,29 +97,33 @@
 <h2>Materials</h2>
 <p style="margin: 0.5em 0 1em 0">
 
-	<a href="http://hcitang.org/papers/2023-chi2023-li-stargazer.pdf"><i class="fa fa-file-pdf-o"></i> PDF File (http://hcitang.org/papers/2023-chi2023-li-stargazer.pdf)</a><br/>
+
+	<a href="https://image-in-that.github.io/"><i class="fa fa-sticky-note-o"></i> URL (https://image-in-that.github.io/)</a><br/>
 
 
-
-	<a href="http://hcitang.org/papers/2023-chi2023-li-stargazer.mp4"><i class="fa fa-film"></i> Video (http://hcitang.org/papers/2023-chi2023-li-stargazer.mp4)</a><br/>
-
-
-	<a href="https://doi.org/10.1145/3544548.3580896"><i class="fa fa-external-link"></i> DOI (https://doi.org/10.1145/3544548.3580896)</a><br/>
 
 </p>
 
 
+<h2>Keywords</h2>
+<p style="margin: 0.5em 0 1em 0">direct manipulation, end-user robot programming, robot instruction following</p>
+
 
 <h2>BibTeX</h2>
-<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@inproceedings{li2023stargazer,<br />
-&nbsp;&nbsp;author = {Li, Jiannan and Sousa, Mauricio and Mahadevan, Karthik and Wang, Bryan and Aoyagui, Paula Akemi and Yu, Nicole and Yang, Angela and Balakrishnan, Ravin and Tang, Anthony and Grossman, Tovi},<br />
-&nbsp;&nbsp;title = {Stargazer: An Interactive Camera Robot for Capturing How-To Videos Based on Subtle Instructor Cues},<br />
-&nbsp;&nbsp;booktitle = {CHI 2023: Proceedings of the 2023 SIGCHI Conference on Human Factors in Computing Systems},<br />
-&nbsp;&nbsp;year = {2023},<br />
+<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@inproceedings{mahadevan2025imageinthat,<br />
+&nbsp;&nbsp;author = {Mahadevan, Karthik and Lewis, Blaine and Li, Jiannan and Mutlu, Bilge and Tang, Anthony and Grossman, Tovi},<br />
+&nbsp;&nbsp;title = {ImageInThat: Manipulating Images to Convey User Instructions to Robots},<br />
+&nbsp;&nbsp;year = {2025},<br />
+&nbsp;&nbsp;publisher = {IEEE Press},<br />
+&nbsp;&nbsp;booktitle = {Proceedings of the 2025 ACM/IEEE International Conference on Human-Robot Interaction},<br />
+&nbsp;&nbsp;pages = {757–766},<br />
+&nbsp;&nbsp;numpages = {10},<br />
+&nbsp;&nbsp;keywords = {direct manipulation, end-user robot programming, robot instruction following},<br />
+&nbsp;&nbsp;location = {Melbourne, Australia},<br />
+&nbsp;&nbsp;series = {HRI '25},<br />
 &nbsp;&nbsp;type = {conference},<br />
-&nbsp;&nbsp;pdfurl = {http://hcitang.org/papers/2023-chi2023-li-stargazer.pdf},<br />
-&nbsp;&nbsp;videourl = {http://hcitang.org/papers/2023-chi2023-li-stargazer.mp4},<br />
-&nbsp;&nbsp;doi = {https://doi.org/10.1145/3544548.3580896}<br />
+&nbsp;&nbsp;notes = {Best Paper Award (Top 1% of all submissions)},<br />
+&nbsp;&nbsp;url = {https://image-in-that.github.io/}<br />
 }<br />
 </p>
 					</div>
