--- a/papers/manesh2024prompting/index.html
+++ b/papers/manesh2024prompting/index.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title>TanGi: Tangible Proxies for Embodied Object Exploration and Manipulation in Virtual Reality</title>
+		<title>How People Prompt Generative AI to Create Interactive VR Scenes</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -76,17 +76,19 @@
 				<div class="9u skel-cell-important">
 					<div id="content">
 						<!-- Content -->
-						<h1 style="margin: 0 0 0.5em 0">TanGi: Tangible Proxies for Embodied Object Exploration and Manipulation in Virtual Reality</h1>
+						<h1 style="margin: 0 0 0.5em 0">How People Prompt Generative AI to Create Interactive VR Scenes</h1>
 
 <p style="margin: 0.5em 0 1em 0">
-<span id="feick2020tangj">Martin Feick, Scott Bateman, Anthony Tang, André Miede, and Nicolai Marquardt. (2020). <i>TanGi: Tangible Proxies for Embodied Object Exploration and Manipulation in Virtual Reality</i>. arXiv.</span>
+<span id="manesh2024prompting">Setareh Aghel Manesh, Tianyi Zhang, Yuki Onishi, Kotaro Hara, Scott Bateman, Jiannan Li, and Anthony Tang. (2024). <span style="text-decoration: underline">How People Prompt Generative AI to Create Interactive VR Scenes</span>. In <i>DIS 2024: Conference on Designing Interactive Systems 2024</i>.</span>
 
 
+
+	<small>Acceptance: 190/695 - 27.4%.</small>
 
 </p>
 
 <h2>Abstract</h2>
-<p style="margin: 0.5em 0 1em 0">Exploring and manipulating complex virtual objects is challenging due to limitations of conventional controllers and free-hand interaction techniques. We present the TanGi toolkit which enables novices to rapidly build physical proxy objects using Composable Shape Primitives. TanGi also provides Manipulators allowing users to build objects including movable parts, making them suitable for rich object exploration and manipulation in VR. With a set of different use cases and applications we show the capabilities of the TanGi toolkit, and evaluate its use. In a study with 16 participants, we demonstrate that novices can quickly build physical proxy objects using the Composable Shape Primitives, and explore how different levels of object embodiment affect virtual object exploration. In a second study with 12 participants we evaluate TanGi’s Manipulators, and investigate the effectiveness of embodied interaction. Findings from this study show that TanGi’s proxies outperform traditional controllers, and were generally favored by participants.</p>
+<p style="margin: 0.5em 0 1em 0">Generative AI tools can provide people with the ability to create vir- tual environments and scenes with natural language prompts. Yet, how people will formulate such prompts is unclear—particularly when they inhabit the environment that they are designing. For instance, it is likely that a person might say, “Put a chair here,” while pointing at a location. If such linguistic and embodied features are common to people’s prompts, we need to tune models to accommo- date them. In this work, we present a Wizard of Oz elicitation study with 22 participants, where we studied people’s implicit expecta- tions when verbally prompting such programming agents to create interactive VR scenes. Our findings show when people prompted the agent, they had several implicit expectations of these agents: (1) they should have an embodied knowledge of the environment; (2) they should understand embodied prompts by users; (3) they should recall previous states of the scene and the conversation, and that (4) they should have a commonsense understanding of objects in the scene. Further, we found that participants prompted differently when they were prompting in situ (i.e. within the VR environment) versus ex situ (i.e. viewing the VR environment from the outside). To explore how these lessons could be applied, we designed and built Ostaad, a conversational programming agent that allows non-programmers to design interactive VR experiences that they inhabit. Based on these explorations, we outline new op- portunities and challenges for conversational programming agents that create VR environments.</p>
 
 <!--
 
@@ -95,24 +97,33 @@
 <h2>Materials</h2>
 <p style="margin: 0.5em 0 1em 0">
 
+	<a href=""><i class="fa fa-file-pdf-o"></i> PDF File ()</a><br/>
 
-	<a href="https://arxiv.org/abs/2001.03021"><i class="fa fa-sticky-note-o"></i> URL (https://arxiv.org/abs/2001.03021)</a><br/>
+
+	<a href="https://programs.sigchi.org/dis/2024"><i class="fa fa-sticky-note-o"></i> URL (https://programs.sigchi.org/dis/2024)</a><br/>
 
 
+	<a href=""><i class="fa fa-film"></i> Video ()</a><br/>
+
+
+	<a href="https://doi.org/10.1145/3643834.3661547"><i class="fa fa-external-link"></i> DOI (https://doi.org/10.1145/3643834.3661547)</a><br/>
 
 </p>
 
 
 
 <h2>BibTeX</h2>
-<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@techreport{feick2020tangj,<br />
-&nbsp;&nbsp;author = {Feick, Martin and Bateman, Scott and Tang, Anthony and Miede, André and Marquardt, Nicolai},<br />
-&nbsp;&nbsp;title = {TanGi: Tangible Proxies for Embodied Object Exploration and Manipulation in Virtual Reality},<br />
-&nbsp;&nbsp;year = {2020},<br />
-&nbsp;&nbsp;number = {2001.03021 [cs.HC]},<br />
-&nbsp;&nbsp;publisher = {arXiv},<br />
-&nbsp;&nbsp;type = {techreport},<br />
-&nbsp;&nbsp;url = {https://arxiv.org/abs/2001.03021}<br />
+<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@inproceedings{manesh2024prompting,<br />
+&nbsp;&nbsp;title = {How People Prompt Generative AI to Create Interactive VR Scenes},<br />
+&nbsp;&nbsp;author = {Manesh, Setareh Aghel and Zhang, Tianyi and Onishi, Yuki and Hara, Kotaro and Bateman, Scott and Li, Jiannan and Tang, Anthony},<br />
+&nbsp;&nbsp;year = {2024},<br />
+&nbsp;&nbsp;booktitle = {DIS 2024: Conference on Designing Interactive Systems 2024},<br />
+&nbsp;&nbsp;type = {conference},<br />
+&nbsp;&nbsp;pdfurl = {},<br />
+&nbsp;&nbsp;videourl = {},<br />
+&nbsp;&nbsp;doi = {https://doi.org/10.1145/3643834.3661547},<br />
+&nbsp;&nbsp;url = {https://programs.sigchi.org/dis/2024},<br />
+&nbsp;&nbsp;acceptance = {190/695 - 27.4%}<br />
 }<br />
 </p>
 					</div>
