--- a/papers/mok2024narratives/index.html
+++ b/papers/mok2024narratives/index.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title>Stargazer: An Interactive Camera Robot for Capturing How-To Videos Based on Subtle Instructor Cues</title>
+		<title>Building Narratives and Probing Concepts: Preparing Materials for Co-Design with Autistic Livestreamers</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -76,17 +76,17 @@
 				<div class="9u skel-cell-important">
 					<div id="content">
 						<!-- Content -->
-						<h1 style="margin: 0 0 0.5em 0">Stargazer: An Interactive Camera Robot for Capturing How-To Videos Based on Subtle Instructor Cues</h1>
+						<h1 style="margin: 0 0 0.5em 0">Building Narratives and Probing Concepts: Preparing Materials for Co-Design with Autistic Livestreamers</h1>
 
 <p style="margin: 0.5em 0 1em 0">
-<span id="li2023stargazer">Jiannan Li, Mauricio Sousa, Karthik Mahadevan, Bryan Wang, Paula Akemi Aoyagui, Nicole Yu, Angela Yang, Ravin Balakrishnan, Anthony Tang, and Tovi Grossman. (2023). <span style="text-decoration: underline">Stargazer: An Interactive Camera Robot for Capturing How-To Videos Based on Subtle Instructor Cues</span>. In <i>CHI 2023: Proceedings of the 2023 SIGCHI Conference on Human Factors in Computing Systems</i>.</span>
+<span id="mok2024narratives">Terrance Mok, Tyson Hartley, Anthony Tang, Adam McCrimmon, and Lora Oehlberg. (2024). <span style="text-decoration: underline">Building Narratives and Probing Concepts: Preparing Materials for Co-Design with Autistic Livestreamers</span>. <i>ACM Transactions on Accessible Computing</i>.</span>
 
 
 
 </p>
 
 <h2>Abstract</h2>
-<p style="margin: 0.5em 0 1em 0">Live and pre-recorded video tutorials are an effective means for teaching physical skills such as cooking or prototyping electronics. A dedicated cameraperson following an instructor’s activities can improve production quality. However, instructors who do not have access to a cameraperson’s help often have to work within the constraints of static cameras. We present Stargazer, a novel approach for assisting with tutorial content creation with a camera robot that autonomously tracks regions of interest based on instructor actions to capture dynamic shots. Instructors can adjust the camera behaviors of Stargazer with subtle cues, including gestures and speech, allowing them to fluidly integrate camera control commands into instructional activities. Our user study with six instructors, each teaching a distinct skill, showed that participants could create dynamic tutorial videos with a diverse range of subjects, camera framing, and camera angle combinations using Stargazer.</p>
+<p style="margin: 0.5em 0 1em 0">Based on ten semi-structured interviews with autistic Twitch streamers, we introduce a series of scenario-based design narratives coupled with technology design concepts as a starting point for co-design discussion about autistic streaming. This work builds on prior thematic analysis of the unique intersection between autism and livestreaming. Our user-centered scenarios highlight the needs, goals, and challenges of autistic individuals in livestreaming contexts. By using evocative narratives, the scenarios serve to facilitate empathy and deeper engagement with the needs of autistic users, and help facilitate and support co-creative dialogues and discussions about new technology designs. We contribute this starting point for researchers and technology designers to co-create more inclusive and supportive online environments for autistic users.</p>
 
 <!--
 
@@ -95,29 +95,30 @@
 <h2>Materials</h2>
 <p style="margin: 0.5em 0 1em 0">
 
-	<a href="http://hcitang.org/papers/2023-chi2023-li-stargazer.pdf"><i class="fa fa-file-pdf-o"></i> PDF File (http://hcitang.org/papers/2023-chi2023-li-stargazer.pdf)</a><br/>
 
 
 
-	<a href="http://hcitang.org/papers/2023-chi2023-li-stargazer.mp4"><i class="fa fa-film"></i> Video (http://hcitang.org/papers/2023-chi2023-li-stargazer.mp4)</a><br/>
-
-
-	<a href="https://doi.org/10.1145/3544548.3580896"><i class="fa fa-external-link"></i> DOI (https://doi.org/10.1145/3544548.3580896)</a><br/>
+	<a href="https://doi.org/10.1145/3706575"><i class="fa fa-external-link"></i> DOI (https://doi.org/10.1145/3706575)</a><br/>
 
 </p>
 
 
+<h2>Keywords</h2>
+<p style="margin: 0.5em 0 1em 0">autism, autistic, live streaming, Twitch, co-design, scenario-based design</p>
+
 
 <h2>BibTeX</h2>
-<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@inproceedings{li2023stargazer,<br />
-&nbsp;&nbsp;author = {Li, Jiannan and Sousa, Mauricio and Mahadevan, Karthik and Wang, Bryan and Aoyagui, Paula Akemi and Yu, Nicole and Yang, Angela and Balakrishnan, Ravin and Tang, Anthony and Grossman, Tovi},<br />
-&nbsp;&nbsp;title = {Stargazer: An Interactive Camera Robot for Capturing How-To Videos Based on Subtle Instructor Cues},<br />
-&nbsp;&nbsp;booktitle = {CHI 2023: Proceedings of the 2023 SIGCHI Conference on Human Factors in Computing Systems},<br />
-&nbsp;&nbsp;year = {2023},<br />
-&nbsp;&nbsp;type = {conference},<br />
-&nbsp;&nbsp;pdfurl = {http://hcitang.org/papers/2023-chi2023-li-stargazer.pdf},<br />
-&nbsp;&nbsp;videourl = {http://hcitang.org/papers/2023-chi2023-li-stargazer.mp4},<br />
-&nbsp;&nbsp;doi = {https://doi.org/10.1145/3544548.3580896}<br />
+<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@article{mok2024narratives,<br />
+&nbsp;&nbsp;author = {Mok, Terrance and Hartley, Tyson and Tang, Anthony and McCrimmon, Adam and Oehlberg, Lora},<br />
+&nbsp;&nbsp;title = {Building Narratives and Probing Concepts: Preparing Materials for Co-Design with Autistic Livestreamers},<br />
+&nbsp;&nbsp;year = {2024},<br />
+&nbsp;&nbsp;publisher = {Association for Computing Machinery},<br />
+&nbsp;&nbsp;address = {New York, NY, USA},<br />
+&nbsp;&nbsp;issn = {1936-7228},<br />
+&nbsp;&nbsp;doi = {https://doi.org/10.1145/3706575},<br />
+&nbsp;&nbsp;journal = {ACM Transactions on Accessible Computing},<br />
+&nbsp;&nbsp;month = dec,<br />
+&nbsp;&nbsp;keywords = {autism, autistic, live streaming, Twitch, co-design, scenario-based design}<br />
 }<br />
 </p>
 					</div>
