--- a/papers/poh2023artefactawarenessworkshop/index.html
+++ b/papers/poh2023artefactawarenessworkshop/index.html
@@ -4,7 +4,7 @@
 -->
 <html>
 	<head>
-		<title>Stargazer: An Interactive Camera Robot for Capturing How-To Videos Based on Subtle Instructor Cues</title>
+		<title> Supporting Artefact Awareness in Partially-Replicated Workspaces </title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -76,17 +76,17 @@
 				<div class="9u skel-cell-important">
 					<div id="content">
 						<!-- Content -->
-						<h1 style="margin: 0 0 0.5em 0">Stargazer: An Interactive Camera Robot for Capturing How-To Videos Based on Subtle Instructor Cues</h1>
+						<h1 style="margin: 0 0 0.5em 0"> Supporting Artefact Awareness in Partially-Replicated Workspaces </h1>
 
 <p style="margin: 0.5em 0 1em 0">
-<span id="li2023stargazer">Jiannan Li, Mauricio Sousa, Karthik Mahadevan, Bryan Wang, Paula Akemi Aoyagui, Nicole Yu, Angela Yang, Ravin Balakrishnan, Anthony Tang, and Tovi Grossman. (2023). <span style="text-decoration: underline">Stargazer: An Interactive Camera Robot for Capturing How-To Videos Based on Subtle Instructor Cues</span>. In <i>CHI 2023: Proceedings of the 2023 SIGCHI Conference on Human Factors in Computing Systems</i>.</span>
+<span id="poh2023artefactawarenessworkshop">Emran Poh, Anthony Tang, Jeannie S. Lee, and Shengdong Zhao. (2023). <span style="text-decoration: underline"> Supporting Artefact Awareness in Partially-Replicated Workspaces </span>. In <i>ISMAR23 Workshop: 1st Joint Workshop on Cross Reality</i>.</span>
 
 
 
 </p>
 
 <h2>Abstract</h2>
-<p style="margin: 0.5em 0 1em 0">Live and pre-recorded video tutorials are an effective means for teaching physical skills such as cooking or prototyping electronics. A dedicated cameraperson following an instructor’s activities can improve production quality. However, instructors who do not have access to a cameraperson’s help often have to work within the constraints of static cameras. We present Stargazer, a novel approach for assisting with tutorial content creation with a camera robot that autonomously tracks regions of interest based on instructor actions to capture dynamic shots. Instructors can adjust the camera behaviors of Stargazer with subtle cues, including gestures and speech, allowing them to fluidly integrate camera control commands into instructional activities. Our user study with six instructors, each teaching a distinct skill, showed that participants could create dynamic tutorial videos with a diverse range of subjects, camera framing, and camera angle combinations using Stargazer.</p>
+<p style="margin: 0.5em 0 1em 0">Using Cross Reality (CR) approaches for remote collaboration will often result in partially-replicated workspaces. Here, workspace artefacts are not equally accessible—i.e. a physical artefact may only be manipulated by one collaborator—and in general, the artefacts become desynchronised over time. In this paper, we introduce a framework for artefact awareness that can help collaborators main- tain an understanding of each others’ manipulations with workspace artefacts. We illustrate our design explorations through sketches, and outline how we aim to study the effectiveness and utility of artefact awareness in cross reality remote collaboration. In our work, we expect to show that effectively supporting artefact awareness will help make cross-reality remote collaboration smoother.</p>
 
 <!--
 
@@ -95,29 +95,27 @@
 <h2>Materials</h2>
 <p style="margin: 0.5em 0 1em 0">
 
-	<a href="http://hcitang.org/papers/2023-chi2023-li-stargazer.pdf"><i class="fa fa-file-pdf-o"></i> PDF File (http://hcitang.org/papers/2023-chi2023-li-stargazer.pdf)</a><br/>
+	<a href=" http://hcitang.org/papers/2023-ismar2023workshop-poh-artefact-awareness.pdf"><i class="fa fa-file-pdf-o"></i> PDF File ( http://hcitang.org/papers/2023-ismar2023workshop-poh-artefact-awareness.pdf)</a><br/>
 
 
+	<a href="https://cross-realities.org"><i class="fa fa-sticky-note-o"></i> URL (https://cross-realities.org)</a><br/>
 
-	<a href="http://hcitang.org/papers/2023-chi2023-li-stargazer.mp4"><i class="fa fa-film"></i> Video (http://hcitang.org/papers/2023-chi2023-li-stargazer.mp4)</a><br/>
 
-
-	<a href="https://doi.org/10.1145/3544548.3580896"><i class="fa fa-external-link"></i> DOI (https://doi.org/10.1145/3544548.3580896)</a><br/>
 
 </p>
 
 
 
 <h2>BibTeX</h2>
-<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@inproceedings{li2023stargazer,<br />
-&nbsp;&nbsp;author = {Li, Jiannan and Sousa, Mauricio and Mahadevan, Karthik and Wang, Bryan and Aoyagui, Paula Akemi and Yu, Nicole and Yang, Angela and Balakrishnan, Ravin and Tang, Anthony and Grossman, Tovi},<br />
-&nbsp;&nbsp;title = {Stargazer: An Interactive Camera Robot for Capturing How-To Videos Based on Subtle Instructor Cues},<br />
-&nbsp;&nbsp;booktitle = {CHI 2023: Proceedings of the 2023 SIGCHI Conference on Human Factors in Computing Systems},<br />
+<p style="font-family: 'Lucida Sans Typewriter', 'Lucida Console', Monaco, 'Bitstream Vera Sans Mono', monospace; font-size: small; background-color: rgb(240,240,240); border: 2px solid; border-color: rgb(222,222,222); border-radius: 5px; margin: 0.5em 0 0 0; line-height: 1em; letter-spacing: 0em">@inproceedings{poh2023artefactawarenessworkshop,<br />
+&nbsp;&nbsp;author = {Poh, Emran and Tang, Anthony and Lee, Jeannie S. and Zhao, Shengdong},<br />
+&nbsp;&nbsp;title = { Supporting Artefact Awareness in Partially-Replicated Workspaces },<br />
+&nbsp;&nbsp;booktitle = {ISMAR23 Workshop: 1st Joint Workshop on Cross Reality},<br />
+&nbsp;&nbsp;editor = {Liang, Hai-Ning and Jetter, Hans-Christian and Maurer, Frank and Gruenefeld, Uwe and Billinghurst, Mark and Anthes, Christoph},<br />
+&nbsp;&nbsp;pdfurl = { http://hcitang.org/papers/2023-ismar2023workshop-poh-artefact-awareness.pdf},<br />
 &nbsp;&nbsp;year = {2023},<br />
-&nbsp;&nbsp;type = {conference},<br />
-&nbsp;&nbsp;pdfurl = {http://hcitang.org/papers/2023-chi2023-li-stargazer.pdf},<br />
-&nbsp;&nbsp;videourl = {http://hcitang.org/papers/2023-chi2023-li-stargazer.mp4},<br />
-&nbsp;&nbsp;doi = {https://doi.org/10.1145/3544548.3580896}<br />
+&nbsp;&nbsp;type = {workshop},<br />
+&nbsp;&nbsp;url = {https://cross-realities.org}<br />
 }<br />
 </p>
 					</div>
