--- a/papers/index.html
+++ b/papers/index.html
@@ -73,6 +73,10 @@
 			<h3>Jump to...</h3>
 			
 			
+			<a href="#2025">2025</a>&nbsp;&nbsp;&nbsp;
+			
+			<a href="#2024">2024</a>&nbsp;&nbsp;&nbsp;
+			
 			<a href="#2023">2023</a>&nbsp;&nbsp;&nbsp;
 			
 			<a href="#2022">2022</a>&nbsp;&nbsp;&nbsp;
@@ -121,6 +125,154 @@
 					<div id="content">
 						<!-- Content -->
 						
+<h1><a name="2025"></a>2025</h1>
+<ol class="bibliography"><li><section id="citation">
+    <a href="/papers/mahadevan2025imageinthat"><span id="mahadevan2025imageinthat">Karthik Mahadevan, Blaine Lewis, Jiannan Li, Bilge Mutlu, Anthony Tang, and Tovi Grossman. (2025). <span style="text-decoration: underline">ImageInThat: Manipulating Images to Convey User Instructions to Robots</span>. In <i>Proceedings of the 2025 ACM/IEEE International Conference on Human-Robot Interaction</i>, IEEE Press, 757–766.</span>
+
+(conference).</a><br />
+
+
+	<small>Notes: Best Paper Award (Top 1% of all submissions).</small>
+
+
+	<br />
+
+
+
+	<a href="https://image-in-that.github.io/"><i class="fa fa-sticky-note-o"></i></a>
+
+
+
+</section><a class="details" href="/papers/mahadevan2025imageinthat/"><!-- --></a></li></ol>
+
+<h1><a name="2024"></a>2024</h1>
+<ol class="bibliography"><li><section id="citation">
+    <a href="/papers/mok2024narratives"><span id="mok2024narratives">Terrance Mok, Tyson Hartley, Anthony Tang, Adam McCrimmon, and Lora Oehlberg. (2024). <span style="text-decoration: underline">Building Narratives and Probing Concepts: Preparing Materials for Co-Design with Autistic Livestreamers</span>. <i>ACM Transactions on Accessible Computing</i>.</span>
+
+(article).</a><br />
+
+
+
+
+
+
+
+	<a href="https://doi.org/10.1145/3706575"><i class="fa fa-external-link"></i></a>
+
+</section><a class="details" href="/papers/mok2024narratives/"><!-- --></a></li>
+<li><section id="citation">
+    <a href="/papers/hu2024footstrikes"><span id="hu2024footstrikes">Changshuo Hu, Thivya Kandappu, Jake Stuchbury-Wass, Yang Liu, Anthony Tang, Cecilia Mascolo, and Dong Ma. (2024). <span style="text-decoration: underline">Detecting Foot Strikes during Running with Earbuds</span>. In <i>BodySys ’24: Proceedings of the Workshop on Body-Centric Computing Systems</i>, Association for Computing Machinery, 35–40.</span>
+
+(workshop,).</a><br />
+
+
+
+
+
+
+
+	<a href="https://doi.org/10.1145/3662009.3662023"><i class="fa fa-external-link"></i></a>
+
+</section><a class="details" href="/papers/hu2024footstrikes/"><!-- --></a></li>
+<li><section id="citation">
+    <a href="/papers/feick2024predictinglimits"><span id="feick2024predictinglimits">Martin Feick, Kora Persephone Regitz, Lukas Gehrke, André Zenner, Anthony Tang, Tobias Patrick Jungbluth, Maurice Rekrut, and Antonio Krüger. (2024). <span style="text-decoration: underline">Predicting the Limits: Tailoring Unnoticeable Hand Redirection Offsets in Virtual Reality to Individuals’ Perceptual Boundaries</span>. In <i>UIST 2024: Proceedings of the 37th Annual ACM Symposium on User Interface Software and Technology</i>, Association for Computing Machinery.</span>
+
+(conference).</a><br />
+
+
+
+
+
+
+
+	<a href="https://doi.org/10.1145/3654777.3676425"><i class="fa fa-external-link"></i></a>
+
+</section><a class="details" href="/papers/feick2024predictinglimits/"><!-- --></a></li>
+<li><section id="citation">
+    <a href="/papers/manesh2024prompting"><span id="manesh2024prompting">Setareh Aghel Manesh, Tianyi Zhang, Yuki Onishi, Kotaro Hara, Scott Bateman, Jiannan Li, and Anthony Tang. (2024). <span style="text-decoration: underline">How People Prompt Generative AI to Create Interactive VR Scenes</span>. In <i>DIS 2024: Conference on Designing Interactive Systems 2024</i>.</span>
+
+(conference).</a><br />
+
+	<small>Acceptance: 190/695 - 27.4%.</small>
+
+
+
+	<br />
+
+
+	<a href=""><i class="fa fa-file-pdf-o"></i></a>
+
+
+	<a href="https://programs.sigchi.org/dis/2024"><i class="fa fa-sticky-note-o"></i></a>
+
+
+	<a href=""><i class="fa fa-film"></i></a>
+
+
+	<a href="https://doi.org/10.1145/3643834.3661547"><i class="fa fa-external-link"></i></a>
+
+</section><a class="details" href="/papers/manesh2024prompting/"><!-- --></a></li>
+<li><section id="citation">
+    <a href="/papers/feick2024avatarcompleteness"><span id="feick2024avatarcompleteness">Martin Feick, André Zenner, Simon Seibert, Anthony Tang, and Antonio Krüger. (2024). <span style="text-decoration: underline">The Impact of Avatar Completeness on Embodiment and the Detectability of Hand Redirection in Virtual Reality</span>. In <i>CHI 2024: Proceedings of the 2024 SIGCHI Conference on Human Factors in Computing Systems</i>.</span>
+
+(conference).</a><br />
+
+	<small>Acceptance: 1058/4028 - 26.3%.</small>
+
+
+
+	<br />
+
+
+	<a href=""><i class="fa fa-file-pdf-o"></i></a>
+
+
+	<a href="https://chi2024.acm.org/"><i class="fa fa-sticky-note-o"></i></a>
+
+
+	<a href=""><i class="fa fa-film"></i></a>
+
+
+	<a href="https://doi.org/10.1145/3643834.3661547"><i class="fa fa-external-link"></i></a>
+
+</section><a class="details" href="/papers/feick2024avatarcompleteness/"><!-- --></a></li>
+<li><section id="citation">
+    <a href="/papers/park2024jollygesture"><span id="park2024jollygesture">Gun Woo Warren Park, Anthony Tang, and Fanny Chevalier. (2024). <span style="text-decoration: underline">JollyGesture: Exploring Dual-Purpose Gestures in VR Presentations</span>. In <i>Graphics Interface 2024 Second Deadline</i>.</span>
+
+(conference).</a><br />
+
+
+
+
+	<a href=" "><i class="fa fa-file-pdf-o"></i></a>
+
+
+	<a href="https://openreview.net/forum?id=KVUIRX0ExL"><i class="fa fa-sticky-note-o"></i></a>
+
+
+	<a href=" "><i class="fa fa-film"></i></a>
+
+
+</section><a class="details" href="/papers/park2024jollygesture/"><!-- --></a></li>
+<li><section id="citation">
+    <a href="/papers/pratte2024hackles"><span id="pratte2024hackles">Sydney Pratt, Anthony Tang, Shannon Hoover, and Lora Oehlberg. (2024). <span style="text-decoration: underline"> HACKLES: Simulating and Visually Representing the Anxiety of Walking Alone </span>. In <i>TEI ’24: Seventeeth International Conference on Tangible, Embedded and Embodied Interaction</i>.</span>
+
+(conference).</a><br />
+
+
+
+
+	<a href=" "><i class="fa fa-file-pdf-o"></i></a>
+
+
+	<a href="https://tei.acm.org/2024"><i class="fa fa-sticky-note-o"></i></a>
+
+
+
+	<a href="https://doi.org/10.1145/3623509.3633392 "><i class="fa fa-external-link"></i></a>
+
+</section><a class="details" href="/papers/pratte2024hackles/"><!-- --></a></li></ol>
+
 <h1><a name="2023"></a>2023</h1>
 <ol class="bibliography"><li><section id="citation">
     <a href="/papers/pratte2023designspace"><span id="pratte2023designspace">Sydney Pratte, Anthony Tang, Shannon Hoover, Maria Elana Hoover, Matt Laprairie, Catherine Larose, and Lora Oehlberg. (2023). <span style="text-decoration: underline"> Towards a Design Space for Storytelling on the Fashion Technology Runway </span>. In <i>TEI ’23: Seventeeth International Conference on Tangible, Embedded and Embodied Interaction</i>.</span>
@@ -141,6 +293,28 @@
 
 </section><a class="details" href="/papers/pratte2023designspace/"><!-- --></a></li>
 <li><section id="citation">
+    <a href="/papers/feick2023turnitup"><span id="feick2023turnitup">Martin Feick, André Zenner, Oscar Ariza, Anthony Tang, Cihan Biyikli, and Antonio Krüger. (2023). <span style="text-decoration: underline">Turn-It-Up: Pseudo-haptic Resistance and Detection Thresholds for Knobs in Virtual Reality</span>. In <i>UIST 2023: The 36th Annual ACM Symposium on User Interface Software Technology</i>.</span>
+
+(conference).</a><br />
+
+	<small>Acceptance: 121/483 - 25.1%.</small>
+
+
+
+	<br />
+
+
+	<a href="http://hcitang.org/papers/2023-uist2023-feick-turnitup.pdf"><i class="fa fa-file-pdf-o"></i></a>
+
+
+
+	<a href="http://hcitang.org/papers/2023-uist2023-feick-turnitup.mp4"><i class="fa fa-film"></i></a>
+
+
+	<a href="https://doi.org/10.1145/3586183.3606787"><i class="fa fa-external-link"></i></a>
+
+</section><a class="details" href="/papers/feick2023turnitup/"><!-- --></a></li>
+<li><section id="citation">
     <a href="/papers/feick2023voxelhap"><span id="feick2023voxelhap">Martin Feick, Cihan Biyikli, Kiran Gani, Anton Wittig, Anthony Tang, and Antonio Krüger. (2023). <span style="text-decoration: underline">VoxelHap: A Toolkit for Constructing Functional Proxies offering rich Haptic Feedback in Virtual Reality</span>. In <i>UIST 2023: The 36th Annual ACM Symposium on User Interface Software Technology</i>.</span>
 
 (conference).</a><br />
@@ -152,14 +326,14 @@
 	<br />
 
 
-	<a href=""><i class="fa fa-file-pdf-o"></i></a>
+	<a href="http://hcitang.org/papers/2023-uist2023-feick-voxelhap.pdf"><i class="fa fa-file-pdf-o"></i></a>
 
 
 
-	<a href=""><i class="fa fa-film"></i></a>
+	<a href="http://hcitang.org/papers/2023-uist2023-feick-voxelhap.mp4"><i class="fa fa-film"></i></a>
 
 
-	<a href=""><i class="fa fa-external-link"></i></a>
+	<a href="https://doi.org/10.1145/3586183.3606722"><i class="fa fa-external-link"></i></a>
 
 </section><a class="details" href="/papers/feick2023voxelhap/"><!-- --></a></li>
 <li><section id="citation">
@@ -167,13 +341,19 @@
 
 (conference).</a><br />
 
+	<small>Acceptance: 55/181 - 30%.</small>
+
+
+
+	<br />
+
+
+	<a href="http://hcitang.org/papers/2023-assets2023-mok-autistic-livestreamers.pdf"><i class="fa fa-file-pdf-o"></i></a>
 
 
 
 
-
-
-	<a href=""><i class="fa fa-external-link"></i></a>
+	<a href="https://doi.org/10.1145/3597638.3608416"><i class="fa fa-external-link"></i></a>
 
 </section><a class="details" href="/papers/mok2023autisticlivestreamers/"><!-- --></a></li>
 <li><section id="citation">
@@ -186,7 +366,7 @@
 
 
 
-	<a href=" 2023-chi2023workshop-pratte-hackles.pdf"><i class="fa fa-file-pdf-o"></i></a>
+	<a href=" http://hcitang.org/papers/2023-chi2023workshop-pratte-hackles.pdf"><i class="fa fa-file-pdf-o"></i></a>
 
 
 	<a href="https://materialfordesign.net/chi2023_workshop/"><i class="fa fa-sticky-note-o"></i></a>
@@ -204,7 +384,7 @@
 
 
 
-	<a href=" 2023-chi2023workshop-stark-fiction-writers.pdf"><i class="fa fa-file-pdf-o"></i></a>
+	<a href=" http://hcitang.org/papers/2023-chi2023workshop-stark-fiction-writers.pdf"><i class="fa fa-file-pdf-o"></i></a>
 
 
 	<a href="https://in2writing.glitch.me/"><i class="fa fa-sticky-note-o"></i></a>
@@ -220,7 +400,7 @@
 
 
 
-	<a href="http://hcitang.org/papers/2023-chi2023-li-stargazer.mp4"><i class="fa fa-file-pdf-o"></i></a>
+	<a href="http://hcitang.org/papers/2023-chi2023-li-stargazer.pdf"><i class="fa fa-file-pdf-o"></i></a>
 
 
 
@@ -249,27 +429,23 @@
 
 </section><a class="details" href="/papers/feick2023handredirection/"><!-- --></a></li>
 <li><section id="citation">
-    <a href="/papers/feick2023turnitup"><span id="feick2023turnitup">Martin Feick, André Zenner, Oscar Ariza, Anthony Tang, Cihan Biyikli, and Antonio Krüger. (2023). <span style="text-decoration: underline">Turn-It-Up: Pseudo-haptic Resistance and Detection Thresholds for Knobs in Virtual Reality</span>. In <i>UIST 2023: The 36th Annual ACM Symposium on User Interface Software Technology</i>.</span>
+    <a href="/papers/poh2023artefactawarenessworkshop"><span id="poh2023artefactawarenessworkshop">Emran Poh, Anthony Tang, Jeannie S. Lee, and Shengdong Zhao. (2023). <span style="text-decoration: underline"> Supporting Artefact Awareness in Partially-Replicated Workspaces </span>. In <i>ISMAR23 Workshop: 1st Joint Workshop on Cross Reality</i>.</span>
 
-(conference).</a><br />
+	(Liang, Hai-Ning and Jetter, Hans-Christian and Maurer, Frank and Gruenefeld, Uwe and Billinghurst, Mark and Anthes, Christoph, Eds.)
 
-	<small>Acceptance: 121/483 - 25.1%.</small>
-
-
-
-	<br />
-
-
-	<a href=""><i class="fa fa-file-pdf-o"></i></a>
+(workshop).</a><br />
 
 
 
-	<a href=""><i class="fa fa-film"></i></a>
+
+	<a href=" http://hcitang.org/papers/2023-ismar2023workshop-poh-artefact-awareness.pdf"><i class="fa fa-file-pdf-o"></i></a>
 
 
-	<a href=""><i class="fa fa-external-link"></i></a>
+	<a href="https://cross-realities.org"><i class="fa fa-sticky-note-o"></i></a>
 
-</section><a class="details" href="/papers/feick2023turnitup/"><!-- --></a></li></ol>
+
+
+</section><a class="details" href="/papers/poh2023artefactawarenessworkshop/"><!-- --></a></li></ol>
 
 <h1><a name="2022"></a>2022</h1>
 <ol class="bibliography"><li><section id="citation">
